# education

create_project/: CMakeLists.txt  package.xml
create_project/src/: pub.cpp
two_nodes/: CMakeLists.txt  package.xml
two_nodes/config/: pub_params.yaml  sub_params.yaml
two_nodes/launch/: pub_sub_launch.py
two_nodes/src/: pub.cpp  sub.cpp
